examples/negative/modules/import_cycle/b.kai
import a

pub fn b_fn() : Int = 1
